# File-Manager

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/ui/windows/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
